# musikell

./: .envrc  .gitignore  .gitlab-ci.yml  .hlint.yaml  README.md  Setup.hs  flake.nix  musikell.cabal
csrc/: kernels.c  tick_loop.c  tick_loop.h
docs/: Musikell.mdx  architecture.mdx  data.json  design.mdx  development.mdx  guide.mdx  index.mdx  reference.mdx
docs/architecture/: backend-guide.mdx  dsp-design.mdx  hot-path.mdx  node-model.mdx  pipeline.mdx
docs/design/: index.mdx  rewrite-struct.txt
docs/design/grammar/snippets/: v1.mkl
docs/development/: build-flow.mdx  build.mdx
docs/guide/: concepts.mdx  conditional.mdx  effects.mdx  examples.mdx  first-program.mdx  installation.mdx  nodes.mdx  patterns.mdx  routing.mdx  stereo.mdx
docs/guide/examples/: drum-machine.mkl  hello-sine.mkl  live-rig.mkl  vocal-chain.mkl
docs/nodes/: base.mdx
docs/reference/: backend.mdx  cli.mdx  config.mdx  core.mdx  ffi.mdx  grammar.mdx  io.mdx  language.mdx  memory.mdx  runtime.mdx
docs/reference/backend/: resolver.mdx
docs/reference/cli/: command.mdx  dispatch.mdx  parse.mdx
docs/reference/config/: types.mdx
docs/reference/core/: execution-plan.mdx  graph.mdx  node.mdx  resolved-plan.mdx  scheduler.mdx  types.mdx
docs/reference/ffi/: abi.mdx  bridge.mdx  exports.mdx
docs/reference/io/: conduit-pipeline.mdx  stream-input.mdx  stream-output.mdx
docs/reference/language/: ast.mdx  grammar.mdx  lowering.mdx  parser.mdx
docs/reference/memory/: buffer.mdx  layout.mdx  pool.mdx
docs/reference/runtime/: accelerate.mdx  kernel.mdx  param.mdx
docs/reference/runtime/accelerate/: backend.mdx  context.mdx  kernel.mdx
docs/reference/runtime/kernel/: builtin.mdx  channel.mdx  crossfade.mdx  delay.mdx  dynamics.mdx  envelope.mdx  filter.mdx  foreign.mdx  gain.mdx  io.mdx  mix.mdx  noise.mdx  oscillator.mdx  reverb.mdx  sequencer.mdx  util.mdx
exe/: Main.hs
nix/: checks.nix  devShells.nix  musikell.nix
nix/utils/: precommit.nix  treefmt.nix
src/Musikell/: Base.hs
src/Musikell/Backend/: Resolver.hs
src/Musikell/CLI/: Command.hs  Dispatch.hs  Parse.hs
src/Musikell/Config/: Types.hs
src/Musikell/Core/: ExecutionPlan.hs  Graph.hs  Node.hs  ResolvedPlan.hs  Scheduler.hs  Types.hs
src/Musikell/FFI/: Bridge.hs  Contract.h  Exports.hs
src/Musikell/Functions/: Base.hs  Wave.hs
src/Musikell/Functions/Oscillator/: Base.hs  Sawtooth.hs  Sine.hs  Square.hs  Triangle.hs
src/Musikell/IO/: ConduitPipeline.hs  StreamInput.hs  StreamOutput.hs
src/Musikell/Language/: AST.hs  Grammar.hs  Lowering.hs  Parser.hs
src/Musikell/Memory/: Buffer.hs  Layout.hs  Pool.hs
src/Musikell/Nodes/Base/: Base.hs  Descriptor.hs  In.hs  Out.hs
src/Musikell/Nodes/Oscilator/: Base.hs  Descriptor.hs  In.hs  Out.hs
src/Musikell/Nodes/Oscillator/: Base.hs  Descriptor.hs  In.hs  Out.hs
src/Musikell/Runtime/: Kernel.hs  Param.hs
src/Musikell/Runtime/Accelerate/: Backend.hs  Context.hs  Kernel.hs
src/Musikell/Runtime/Kernel/: Builtin.hs  Foreign.hs
src/Musikell/Runtime/Kernel/Builtin/: Channel.hs  Crossfade.hs  Delay.hs  Dynamics.hs  Envelope.hs  Filter.hs  Gain.hs  IO.hs  Mix.hs  Noise.hs  Oscillator.hs  Reverb.hs  Sequencer.hs  Util.hs
src/Musikell/Types/: Base.hs
test/: Main.hs
test/Test/Musikell/CLI/: Parse.hs
test/Test/Musikell/Core/: ExecutionPlan.hs  Graph.hs
test/Test/Musikell/Functions/: Base.hs  Wave.hs
test/Test/Musikell/Functions/Oscillator/: Sawtooth.hs  Sine.hs  Square.hs  Triangle.hs
test/Test/Musikell/Language/: Parser.hs
test/Test/Musikell/Memory/: Buffer.hs
test/Test/Musikell/Nodes/: Base.hs  BaseNode.hs  OscilatorNode.hs  OscillatorNode.hs
utils/: get-env-check.sh  run-check.sh
utils/docs/: build_index.py  hook.sh  utils.py  validate.py
utils/execution/: check-coverage-threshold.sh  haskell-header-hook.sh
