cabal-version: 3.0
name:          musikell
version:       0.1.0.0

-- synopsis:
-- description:
license:       Apache-2.0
license-file:  LICENSE
author:        RahulNavneeth
maintainer:    rahulmnavneeth@bitspace.org.in

-- copyright:
category:      Sound
build-type:    Custom

-- extra-doc-files:    
-- extra-source-files:

common warnings
  ghc-options: -Wall

custom-setup
  setup-depends:
    , base   >=4.7 && <5
    , Cabal  >=2.4

library
  import:           warnings
  exposed-modules:
    Musikell.Nodes.Base.Base
    Musikell.Nodes.Base.In
    Musikell.Nodes.Base.Out
    Musikell.Nodes.Oscilator.Descriptor
    Musikell.Nodes.Oscilator.In

  other-modules:
    Musikell.Functions.Base
    Musikell.Functions.Wave
    Musikell.Nodes.Base.Descriptor
    Musikell.Nodes.Oscilator.Base
    Musikell.Nodes.Oscilator.Out
    Musikell.Types.Base

  -- other-extensions:
  build-depends:    base >=4.17 && <4.20
  hs-source-dirs:   src
  default-language: Haskell2010

executable musikell
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base      >=4.17 && <4.20
    , musikell

  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite musikell-test
  import:           warnings
  default-language: Haskell2010
  ghc-options:      -fhpc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs

  -- other-modules:
  build-depends:
    , base              >=4.17 && <4.20
    , musikell
    , tasty
    , tasty-hunit
    , tasty-quickcheck
