cabal-version: 3.0
name:          musikell
version:       0.1.0.0

-- synopsis:
-- description:
license:       Apache-2.0
license-file:  LICENSE
author:        RahulNavneeth
maintainer:    rahulmnavneeth@bitspace.org.in

-- copyright:
category:      Sound
build-type:    Custom

-- extra-doc-files:    
-- extra-source-files:

common warnings
  ghc-options: -Wall

custom-setup
  setup-depends:
    , base   >=4.7 && <5
    , Cabal  >=2.4

library
  import:           warnings
  exposed-modules:
    Musikell.Functions.Base
    Musikell.Functions.Oscillator.Base
    Musikell.Functions.Oscillator.Sawtooth
    Musikell.Functions.Oscillator.Sine
    Musikell.Functions.Oscillator.Square
    Musikell.Functions.Oscillator.Triangle
    Musikell.Functions.Wave
    Musikell.Nodes.Base.Base
    Musikell.Nodes.Base.Descriptor
    Musikell.Nodes.Base.In
    Musikell.Nodes.Base.Out
    Musikell.Nodes.Oscillator.Base
    Musikell.Nodes.Oscillator.Descriptor
    Musikell.Nodes.Oscillator.In
    Musikell.Nodes.Oscillator.Out
    Musikell.Types.Base

  -- other-modules:
  -- other-extensions:
  build-depends:    base >=4.17 && <4.20
  hs-source-dirs:   src
  default-language: Haskell2010

executable musikell
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base      >=4.17 && <4.20
    , musikell

  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite musikell-test
  import:           warnings
  default-language: Haskell2010
  ghc-options:      -fhpc
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test src
  main-is:          Main.hs
  other-modules:
    Musikell.Functions.Base
    Musikell.Functions.Oscillator.Base
    Musikell.Functions.Oscillator.Sawtooth
    Musikell.Functions.Oscillator.Sine
    Musikell.Functions.Oscillator.Square
    Musikell.Functions.Oscillator.Triangle
    Musikell.Functions.Wave
    Musikell.Nodes.Base.Base
    Musikell.Nodes.Base.Descriptor
    Musikell.Nodes.Base.In
    Musikell.Nodes.Base.Out
    Musikell.Nodes.Oscillator.Base
    Musikell.Nodes.Oscillator.Descriptor
    Musikell.Nodes.Oscillator.In
    Musikell.Nodes.Oscillator.Out
    Musikell.Types.Base
    Test.Musikell.Functions.Base
    Test.Musikell.Functions.Wave
    Test.Musikell.Nodes.Base
    Test.Musikell.Nodes.BaseNode
    Test.Musikell.Nodes.OscillatorNode

  build-depends:
    , base              >=4.17 && <4.20
    , musikell
    , tasty
    , tasty-hunit
    , tasty-quickcheck
